moving couch-config to config.js

--- a/config.js.sample
+++ b/config.js.sample
@@ -1,9 +1,16 @@
 var config = {
+	// config for the xmpp-server
 	xmpp : {
-		jid : 'username@example.com',	// jabber-id
-		password : '*******',					// password
-		host : 'example.com',					// host
-		port : 5222										// port
+		jid : 'username@example.com',
+		password : '*******',
+		host : 'example.com',
+		port : 5222
+	},
+
+	// config for the couch-db connection
+	couch : {
+		host : 'localhost'
+		port : '5984'
 	}
 }
 module.exports = config
